@@ -178,6 +178,20 @@ namespace lsp
          * @return status of operation
          */
         status_t get_current_dir(io::Path *path);
+
+        /**
+         * Follow ther URL (open in the matching program)
+         * @param url URL to follow
+         * @return status of operation
+         */
+        status_t follow_url(const char *url);
+
+        /**
+         * Follow ther URL (open in the matching program)
+         * @param url URL to follow
+         * @return status of operation
+         */
+        status_t follow_url(const LSPString *url);
     }
 }
 
