@@ -6,7 +6,8 @@
 - Several fixes for resource compressor.
 - Removed fdatasync() call for io::NativeFile::flush method.
 - Added system::get_current_dir() function.
-- Added  support of IOutStream::writeb() function.
+- Added support of IOutStream::writeb() function.
+- Added system::follow_url() functions to follow the specified URL.
 
 === 0.5.8 ===
 * Added support of DOM parsing and serializing for JSON files.
